fixed alignment, margins, padding

--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -1,26 +1,37 @@
 .card {
-    size: auto;
+    /* size: auto;
     min-width: 275px;
     max-width: 200px;
     height: fit-content;
-    transition: .2s ease-out;
+    transition: .2s ease-out; */
   
+    padding-bottom: 55%; 
+    height: 680px;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 30px
   }
+
+
+#rating-container {
+  height: 400px
+
+}  
   
   img
   {
     justify-content: center;
-    height: auto;
-    width: auto;
-    max-height: 200px;
-    max-width: 307px;
+    height: 1;
+    width: 2;
+    max-height: 300px;
+    max-width: 400px;
     left:0;
   }
   
-  div {
+  /* div {
     position: relative;
     transition: .2s ease-out;
-  }
+  } */
   
   .card:hover{
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
